PR/42246: NAKAJIMA Yoshihiro: provide COMPAT_50 for LFS