sys/ufs/lfs/lfs_vnops.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: lfs_vnops.c,v 1.221 2009/05/07 20:32:51 elad Exp $	*/
+/*	$NetBSD: lfs_vnops.c,v 1.222 2009/10/29 17:10:32 christos Exp $	*/
 
 /*-
  * Copyright (c) 1999, 2000, 2001, 2002, 2003 The NetBSD Foundation, Inc.
@@ -60,7 +60,7 @@
  */
 
 #include <sys/cdefs.h>
-__KERNEL_RCSID(0, "$NetBSD: lfs_vnops.c,v 1.221 2009/05/07 20:32:51 elad Exp $");
+__KERNEL_RCSID(0, "$NetBSD: lfs_vnops.c,v 1.222 2009/10/29 17:10:32 christos Exp $");
 
 #ifdef _KERNEL_OPT
 #include "opt_compat_netbsd.h"
@@ -1426,6 +1426,9 @@ lfs_fcntl(void *v)
 		int  a_fflag;
 		kauth_cred_t a_cred;
 	} */ *ap = v;
+#ifdef COMPAT_50
+	struct timeval tv;
+#endif
 	struct timeval *tvp;
 	BLOCK_INFO *blkiov;
 	CLEANERINFO *cip;
@@ -1463,13 +1466,31 @@ lfs_fcntl(void *v)
 
 	error = 0;
 	switch ((int)ap->a_command) {
-	    case LFCNSEGWAITALL:
+#ifdef COMPAT_50
+	    case LFCNSEGWAITALL_COMPAT_50:
+#ifdef COMPAT_20
 	    case LFCNSEGWAITALL_COMPAT:
+#endif
+		fsidp = NULL;
+		/* FALLSTHROUGH */
+	    case LFCNSEGWAIT_COMPAT_50:
+#ifdef COMPAT_20
+	    case LFCNSEGWAIT_COMPAT:
+#endif
+		{
+			struct timeval50 *tvp50
+				= (struct timeval50 *)ap->a_data;
+			timeval50_to_timeval(tvp50, &tv);
+			tvp = &tv;
+		}
+		goto segwait_common;
+#endif /* COMPAT_50 */
+	    case LFCNSEGWAITALL:
 		fsidp = NULL;
 		/* FALLSTHROUGH */
 	    case LFCNSEGWAIT:
-	    case LFCNSEGWAIT_COMPAT:
 		tvp = (struct timeval *)ap->a_data;
+segwait_common:
 		mutex_enter(&lfs_lock);
 		++fs->lfs_sleepers;
 		mutex_exit(&lfs_lock);
@@ -1553,7 +1574,9 @@ lfs_fcntl(void *v)
 		return lfs_vptofh(fs->lfs_ivnode, &(fhp->fh_fid), &fh_size);
 #endif
 
+#ifdef COMPAT_40
 	    case LFCNIFILEFH_COMPAT2:
+#endif
 	    case LFCNIFILEFH:
 		/* Return the filehandle of the Ifile */
 		fhp = (struct fhandle *)ap->a_data;
@@ -1583,7 +1606,9 @@ lfs_fcntl(void *v)
 		return lfs_resize_fs(fs, *(int *)ap->a_data);
 
 	    case LFCNWRAPSTOP:
+#ifdef COMPAT_40
 	    case LFCNWRAPSTOP_COMPAT:
+#endif
 		/*
 		 * Hold lfs_newseg at segment 0; if requested, sleep until
 		 * the filesystem wraps around.  To support external agents
@@ -1601,8 +1626,11 @@ lfs_fcntl(void *v)
 		if (fs->lfs_nowrap == 0)
 			log(LOG_NOTICE, "%s: disabled log wrap\n", fs->lfs_fsmnt);
 		++fs->lfs_nowrap;
-		if (*(int *)ap->a_data == 1 ||
-		    ap->a_command == LFCNWRAPSTOP_COMPAT) {
+		if (*(int *)ap->a_data == 1
+#ifdef COMPAT_40
+		    || ap->a_command == LFCNWRAPSTOP_COMPAT
+#endif
+							   ) {
 			log(LOG_NOTICE, "LFCNSTOPWRAP waiting for log wrap\n");
 			error = mtsleep(&fs->lfs_nowrap, PCATCH | PUSER,
 				"segwrap", 0, &lfs_lock);
@@ -1615,7 +1643,9 @@ lfs_fcntl(void *v)
 		return 0;
 
 	    case LFCNWRAPGO:
+#ifdef COMPAT_40
 	    case LFCNWRAPGO_COMPAT:
+#endif
 		/*
 		 * Having done its work, the agent wakes up the writer.
 		 * If the argument is 1, it sleeps until a new segment
@@ -1623,8 +1653,10 @@ lfs_fcntl(void *v)
 		 */
 		mutex_enter(&lfs_lock);
 		error = lfs_wrapgo(fs, VTOI(ap->a_vp),
-				   (ap->a_command == LFCNWRAPGO_COMPAT ? 1 :
-				    *((int *)ap->a_data)));
+#ifdef COMPAT_40
+				   ap->a_command == LFCNWRAPGO_COMPAT ? 1 :
+#endif
+				    *((int *)ap->a_data));
 		mutex_exit(&lfs_lock);
 		return error;
 
